--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
 
     <!-- Page Title-->
-    <title>Ignite - Portfolio and Landing Page Template</title>
+    <title>Isaac Iglesias | Pentester</title>
 
     <!-- Meta Tags-->
-    <meta name="description" content="Ignite - functional and beautifully designed portfolio and landing page template to kick-start your project">
-    <meta name="keywords" content="ignite, coming soon, under construction, template, coming soon page, html5, css3, fashion, elegant">
+    <meta name="description" content="Isaac Iglesias - Personal Website">
+    <meta name="keywords" content="isaac iglesias, cybersecurity, penetration tester, freelancer, hacking">
     <meta name="author" content="mix_design">
 
     <!-- Viewport Meta-->
@@ -26,8 +26,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Ignite - Portfolio and Landing Page Template">
-    <meta property="og:description" content="Ignite - functional and beautifully designed portfolio and landing page template to kick-start your project">
+    <meta property="og:title" content="Isaac Iglesias - Personal Website">
+    <meta property="og:description" content="Isaac Iglesias - Personal Website">
     <meta property="og:url" content="http://mixdesign.club/themeforest/ignite/">
     <meta property="og:image" content="http://mixdesign.club/themeforest/ignite/favicon/og-image.jpg">
     <!-- Facebook Metadata End -->
@@ -51,7 +51,7 @@
     <div class="loader">
       <div class="loader__content">
         <div class="loader__logo">
-          <img src="img/logo_small.png" alt="Ignite - Portfolio and Landing Page Template">
+          <img src="img/logo_small.png" alt="Isaac Iglesias - Personal Website">
         </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
 
             <!-- Logo Start -->
             <div class="logo">
-              <img src="img/logo_small.png" alt="Ignite - Portfolio and Landing Page Template">
+              <img src="img/logo_small.png" alt="Isaac Iglesias - Personal Website">
             </div>
             <!-- Logo End -->
 
@@ -382,22 +382,22 @@
                     <div class="row gx-5">
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="text">
                         <h3>Eye catching<br>design</h3>
                       </div>
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="text">
                         <h3>Trendy colors<br>and fonts</h3>
                       </div>
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="text">
                         <h3>Smooth section<br>transitions</h3>
                       </div>
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="text">
                         <h3>Ready-to-use<br>contact form</h3>
                       </div>
                     </div>
@@ -717,7 +717,7 @@
             <!-- Contact Form Start -->
             <form class="form form-light sayhello-form" id="sayhello-form">
               <!-- Hidden Required Fields -->
-              <input type="hidden" name="project_name" value="Ignite - Portfolio and Landing Page Template">
+              <input type="hidden" name="project_name" value="Isaac Iglesias - Personal Website">
               <input type="hidden" name="admin_email" value="support@mixdesign.club">
               <input type="hidden" name="form_subject" value="Contact Form Message">
               <!-- END Hidden Required Fields-->
